--- a/main/css/style.css
+++ b/main/css/style.css
@@ -13,3 +13,29 @@
 .visual{
     height: 400px;background-color: #ccc;
 }
+
+/* company */
+.visual.company{
+    height: 200px;background-color: gold;
+    display: flex;justify-content: center;align-items: center;
+    font-size: 2em;
+}
+
+/* content */
+/* .section{}
+.section .aside{float: right;width: 290px;background: pink;height: 800px;}
+.section .contents{float: left;width: 900px;background: #eee;height: 800px;} */
+
+.section{height: 800px;display: flex;justify-content: space-between;}
+.section .aside{width: 290px;background: pink;order: 2;}
+.section .contents{width: 900px;background: #eee;order: 1;}
+
+
+/* company */
+.section.company .contents{
+    width: 100%;
+}
+
+.footer{
+    background: #aaa;
+    padding: 30px 0;}
