--- a/main2/include/header.html
+++ b/main2/include/header.html
@@ -43,7 +43,7 @@
     <header id="header">
         <div class="headerTopWrap">
             <div class="headerTop container clearfix">
-                <h1 class="logo"><a href="#"><img src="images/logo.png" alt=""></a></h1>
+                <h1 class="logo"><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
                 <div class="searchWrap">
                     <form action="#">
                         <input type="text" name="search" placeholder="검색어를 입력하세요." class="inp">
