--- a/main2/css/style.css
+++ b/main2/css/style.css
@@ -38,6 +38,7 @@ p.title{
     border-radius: 25px;
 }
 .inp:focus{outline:none}
+#header .right>ul>li{font-size: 30px;line-height: 10px;}
 
 /* sub3form  */
 
@@ -64,7 +65,7 @@ p.title{
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     overflow: hidden;
-    float: left;
+    
 }
 .btn_box button{
     width: 100px;
@@ -125,7 +126,7 @@ p.number{
     display: inline-block;
     padding: 20px 0;
     background-color: #fff;
-    height: 300px;float: right;
+    height: 300px;
     width: 372px;
     
 }
