--- a/main2/include/header.html
+++ b/main2/include/header.html
@@ -55,11 +55,11 @@
                 </div>
                 <div class="right clearfix">
                     <p class="number">+82 02 1234 5678</p>
-                    <ul class="clearfix">
-                        <li><a href="#"><img src="images/facebook.png" alt=""></a></li>
-                        <li><a href="#"><img src="images/twitter.png" alt=""></a></li>
-                        <li><a href="#"></a><img src="images/youtube.png" alt=""></li>
-                        <li><a href="#"><img src="images/google.png" alt=""></a></li>
+                    <ul class="sns clearfix">
+                        <li><a href="#"><i class="fa-brands fa-facebook-square"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-twitter-square"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-youtube-square"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-google-plus-square"></i></a></li>
                     </ul>
                 </div>
             </div>
