--- a/main2/css/style.css
+++ b/main2/css/style.css
@@ -65,6 +65,7 @@ p.title{
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     overflow: hidden;
+    float: left;
     
 }
 .btn_box button{
@@ -126,9 +127,8 @@ p.number{
     display: inline-block;
     padding: 20px 0;
     background-color: #fff;
-    height: 300px;
+    height: 300px; float: right;
     width: 372px;
-    float: right;
 }
 .conL{margin-right: 16px;}
 .conR{display: inline-block;padding: 30px;}
