--- a/main2/include/header.html
+++ b/main2/include/header.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="./images/modu.jpg" />
     <title>모두투어</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
@@ -67,7 +68,7 @@
         <div class="mainMenuWrap">
             <nav class="navbar container">
                 <ul class="clearfix">
-                    <li><a href="package.html" <? if($menu==1){?> class="active" <?}?>>해외패키지</a></li>
+                    <li><a href="package.html" <?php if($menu==1){?> class="active" <?}?>>해외패키지</a></li>
                     <li><a href="travel.html" <? if($menu==2){?> class="active" <?}?>>테마여행</a></li>
                     <li><a href="tour.html" <? if($menu==3){?> class="active" <?}?>>개별여행</a></li>
                     <li><a href="jeju.html" <? if($menu==4){?> class="active" <?}?>>국내/제주</a></li>
